--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,14 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.1.0
   http: ^0.12.1
-  shared_preferences: ^0.5.3+1
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.16.1
+  flutter_phoenix: ^0.1.0
+  flutter_facebook_login: ^3.0.0
+  image_picker: ^0.6.7+2
+
+
+
 
 
 
