--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  provider: ^4.1.0
+  provider: ^4.3.2
   http: ^0.12.1
   google_sign_in: ^4.5.1
   firebase_auth: ^0.16.1
@@ -43,6 +43,12 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   firebase_storage: ^3.1.6
   url_launcher: ^5.5.0
+  timeago: ^2.0.26
+  cached_network_image: ^2.2.0+1
+  firebase_messaging: ^6.0.16
+
+
+
 
 
 
